syntax = "proto3";  // 指定使用 proto3 语法 | EN Specify to use proto3 syntax

package stress;     // 定义包名，用于区分不同的 proto 文件 | EN Define package name to distinguish different proto files

// 指定生成 Go 代码的包路径和包名
// 生成的代码会放在 github.com/kamalyes/go-stress/distributed/proto 目录下，包名为 proto
// | EN Specify the package path and name for generated Go code
// | EN The generated code will be placed in the directory github.com/kamalyes/go-stress/distributed/proto with package name "proto"
option go_package = "github.com/kamalyes/go-stress/distributed/proto;proto";

// Agent 状态枚举 | EN Agent state enumeration
// 定义压测代理（Slave）的运行状态 | EN Define the running state of stress test agent (Slave)
enum AgentState {
  AGENT_STATE_UNSPECIFIED = 0;  // 未指定状态（proto3 要求第一个值为 0） | EN Unspecified state (proto3 requires the first value to be 0)
  AGENT_STATE_IDLE = 1;         // 空闲状态：代理已就绪，等待接收任务 | EN Idle state: Agent is ready and waiting to receive tasks
  AGENT_STATE_RUNNING = 2;      // 运行中：代理正在执行压测任务 | EN Running: Agent is executing stress test tasks
  AGENT_STATE_STOPPING = 3;     // 停止中：代理正在停止当前任务 | EN Stopping: Agent is stopping the current task
  AGENT_STATE_ERROR = 4;        // 错误状态：代理运行出错，无法正常工作 | EN Error: Agent encountered an error and cannot work normally
  AGENT_STATE_OFFLINE = 5;      // 离线状态：代理与主节点失联 | EN Offline: Agent lost connection with master node
}

// 任务状态枚举 | EN Task state enumeration
// 定义压测任务的生命周期状态 | EN Define the lifecycle state of stress test tasks
enum TaskState {
  TASK_STATE_UNSPECIFIED = 0;  // 未指定状态 | EN Unspecified state
  TASK_STATE_PENDING = 1;      // 待执行：任务已下发，等待代理开始执行 | EN Pending: Task has been issued, waiting for agent to start execution
  TASK_STATE_RUNNING = 2;      // 运行中：任务正在执行 | EN Running: Task is being executed
  TASK_STATE_COMPLETE = 3;     // 已完成：任务正常执行完毕 | EN Completed: Task finished execution normally
  TASK_STATE_FAILED = 4;       // 执行失败：任务执行过程中出错 | EN Failed: Task encountered an error during execution
  TASK_STATE_STOPPED = 5;      // 已停止：任务被手动停止 | EN Stopped: Task was manually stopped
}

// 协议类型枚举 | EN Protocol type enumeration
// 定义压测支持的协议类型 | EN Define the protocol types supported by stress testing
enum Protocol {
  PROTOCOL_UNSPECIFIED = 0;    // 未指定协议 | EN Unspecified protocol
  PROTOCOL_HTTP = 1;           // HTTP/HTTPS 协议 | EN HTTP/HTTPS protocol
  PROTOCOL_GRPC = 2;           // gRPC 协议 | EN gRPC protocol
  PROTOCOL_WEBSOCKET = 3;      // WebSocket 协议 | EN WebSocket protocol
}

// Master 服务接口 | EN Master Service Interface
// 主节点（Master）对外提供的 gRPC 服务，供从节点（Slave）调用 | EN gRPC service provided by master node for slave nodes to call
service MasterService {
  // Slave 注册 | EN Slave Registration
  // 从节点启动后向主节点注册自身信息，完成接入流程 | EN After startup, slave node registers its information with master node to complete access process
  rpc RegisterSlave(SlaveInfo) returns (RegisterResponse);
  
  // Slave 心跳 | EN Slave Heartbeat
  // 从节点定期向主节点发送心跳，汇报自身状态，保持连接 | EN Slave node sends heartbeat to master node periodically to report status and maintain connection
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // 上报统计数据（流式） | EN Report Statistics (Stream)
  // 从节点以流式方式向主节点上报压测统计数据（支持批量/实时上报） | EN Slave node reports stress test statistics to master node in streaming mode (supports batch/realtime reporting)
  rpc ReportStats(stream StatsData) returns (ReportResponse);
  
  // Slave 下线 | EN Slave Unregistration
  // 从节点主动向主节点发起下线请求，注销自身信息 | EN Slave node actively initiates unregistration request to master node to cancel its information
  rpc UnregisterSlave(UnregisterRequest) returns (UnregisterResponse);
}

// Slave 服务接口 | EN Slave Service Interface
// 从节点（Slave）对外提供的 gRPC 服务，供主节点调用 | EN gRPC service provided by slave node for master node to call
service SlaveService {
  // 接收任务 | EN Receive Task
  // 主节点向从节点下发压测任务配置，触发任务执行 | EN Master node sends stress test task configuration to slave node to trigger task execution
  rpc ExecuteTask(TaskConfig) returns (TaskResponse);
  
  // 停止任务 | EN Stop Task
  // 主节点指令从节点停止指定的压测任务 | EN Master node instructs slave node to stop the specified stress test task
  rpc StopTask(StopRequest) returns (StopResponse);
  
  // 查询状态 | EN Query Status
  // 主节点查询从节点的当前运行状态 | EN Master node queries the current running status of slave node
  rpc GetStatus(StatusRequest) returns (SlaveStatus);
  
  // 更新配置 | EN Update Configuration
  // 主节点向从节点下发配置更新指令（如修改系统参数） | EN Master node sends configuration update instructions to slave node (e.g., modify system parameters)
  rpc UpdateConfig(ConfigUpdate) returns (UpdateResponse);
}

// Slave 信息 | EN Slave Information
// 从节点注册时上报的自身基础信息 | EN Basic information reported by slave node during registration
message SlaveInfo {
  string slave_id = 1;          // 从节点唯一标识（可由主节点分配或自身生成） | EN Unique identifier of slave node (can be assigned by master or generated by itself)
  string hostname = 2;          // 从节点主机名 | EN Hostname of slave node
  string ip = 3;                // 从节点 IP 地址 | EN IP address of slave node
  int32 cpu_cores = 4;          // CPU 核心数（用于主节点调度任务） | EN Number of CPU cores (used by master node for task scheduling)
  int64 memory = 5;             // 内存大小（字节） | EN Memory size (bytes)
  string version = 6;           // 从节点程序版本号 | EN Version number of slave node program
  string region = 7;            // 节点所在区域（如机房/地域，用于分组调度） | EN Node region (e.g., computer room/region, used for group scheduling)
  map<string, string> labels = 8;  // 自定义标签（用于筛选/分组） | EN Custom labels (used for filtering/grouping)
  int32 grpc_port = 9;          // gRPC 服务端口（主节点调用从节点的端口） | EN gRPC service port (port for master node to call slave node)
}

// 注册响应 | EN Registration Response
// 主节点对从节点注册请求的响应 | EN Master node's response to slave node registration request
message RegisterResponse {
  bool success = 1;             // 注册是否成功 | EN Whether registration is successful
  string message = 2;           // 注册结果描述（失败时返回原因） | EN Description of registration result (returns reason if failed)
  string token = 3;             // 身份令牌（后续心跳/上报需携带，用于鉴权） | EN Identity token (required for subsequent heartbeat/reporting for authentication)
  int64 heartbeat_interval = 4; // 心跳间隔（秒）：主节点指定从节点的心跳发送频率 | EN Heartbeat interval (seconds): Master node specifies the heartbeat sending frequency of slave node
}

// 心跳请求 | EN Heartbeat Request
// 从节点向主节点发送心跳的请求参数 | EN Request parameters for slave node to send heartbeat to master node
message HeartbeatRequest {
  string slave_id = 1;          // 从节点 ID | EN Slave node ID
  int64 timestamp = 2;          // 心跳发送时间戳（毫秒） | EN Heartbeat sending timestamp (milliseconds)
  SlaveStatus status = 3;       // 从节点当前状态详情 | EN Detailed current status of slave node
}

// 心跳响应 | EN Heartbeat Response
// 主节点对心跳请求的响应 | EN Master node's response to heartbeat request
message HeartbeatResponse {
  bool ok = 1;                  // 心跳是否被正常接收 | EN Whether heartbeat is received normally
  string message = 2;           // 响应描述信息 | EN Response description information
  repeated string commands = 3; // 主节点下发的指令列表（如"重启"、"更新配置"等） | EN List of commands issued by master node (e.g., "restart", "update config", etc.)
}

// 任务配置 | EN Task Configuration
// 主节点下发给从节点的压测任务详细配置 | EN Detailed configuration of stress test task sent by master node to slave node
message TaskConfig {
  string task_id = 1;           // 任务唯一标识 | EN Unique task identifier
  Protocol protocol = 2;        // 压测协议类型（http/grpc/websocket） | EN Stress test protocol type (http/grpc/websocket)
  string target = 3;            // 压测目标地址（如 http://127.0.0.1:8080/api） | EN Stress test target address (e.g., http://127.0.0.1:8080/api)
  int32 worker_count = 4;       // 并发工作协程数（压测并发数） | EN Number of concurrent worker goroutines (stress test concurrency)
  int32 duration = 5;           // 压测持续时间（秒） | EN Stress test duration (seconds)
  int32 ramp_up = 6;            // 预热时间（秒）：逐步提升并发数的时间 | EN Ramp-up time (seconds): Time to gradually increase concurrency
  bytes config_data = 7;        // 详细配置数据（JSON 序列化后的字节数据，如请求头、请求体等） | EN Detailed configuration data (JSON serialized bytes, e.g., request headers, request body, etc.)
  int32 report_interval = 8;    // 统计数据上报间隔（秒） | EN Statistics reporting interval (seconds)
  TaskState state = 9;          // 任务初始状态 | EN Initial task state
}

// 任务响应 | EN Task Response
// 从节点对执行任务请求的响应 | EN Slave node's response to task execution request
message TaskResponse {
  bool accepted = 1;            // 是否接受任务（如资源不足时可拒绝） | EN Whether to accept the task (can be rejected if resources are insufficient)
  string message = 2;           // 响应描述（拒绝时说明原因） | EN Response description (explain reason if rejected)
  string task_id = 3;           // 任务 ID（确认接收的任务标识） | EN Task ID (identifier of confirmed received task)
}

// 停止请求 | EN Stop Request
// 主节点向从节点发送的停止任务请求 | EN Stop task request sent by master node to slave node
message StopRequest {
  string slave_id = 1;          // 从节点 ID | EN Slave node ID
  string task_id = 2;           // 要停止的任务 ID | EN ID of the task to stop
  bool force = 3;               // 是否强制停止（忽略任务状态，直接终止） | EN Whether to force stop (ignore task state and terminate directly)
}

// 停止响应 | EN Stop Response
// 从节点对停止任务请求的响应 | EN Slave node's response to stop task request
message StopResponse {
  bool stopped = 1;             // 任务是否已停止 | EN Whether the task has been stopped
  string message = 2;           // 停止结果描述（失败时说明原因） | EN Description of stop result (explain reason if failed)
}

// 状态请求 | EN Status Request
// 主节点查询从节点状态的请求参数 | EN Request parameters for master node to query slave node status
message StatusRequest {
  string slave_id = 1;          // 要查询的从节点 ID | EN ID of the slave node to query
}

// Slave 状态 | EN Slave Status
// 从节点的实时运行状态信息 | EN Real-time running status information of slave node
message SlaveStatus {
  string slave_id = 1;          // 从节点 ID | EN Slave node ID
  AgentState state = 2;         // 从节点当前状态（枚举值） | EN Current state of slave node (enumeration value)
  string current_task_id = 3;   // 当前正在执行的任务 ID（无则为空） | EN ID of the currently executing task (empty if none)
  double cpu_usage = 4;         // CPU 使用率（0-100） | EN CPU usage rate (0-100)
  double memory_usage = 5;      // 内存使用率（0-100） | EN Memory usage rate (0-100)
  int64 running_workers = 6;    // 当前运行的工作协程数 | EN Number of currently running worker goroutines
  int64 total_requests = 7;     // 已发送的总请求数 | EN Total number of requests sent
  int64 timestamp = 8;          // 状态采集时间戳（毫秒） | EN Status collection timestamp (milliseconds)
}

// 统计数据 | EN Statistics Data
// 从节点上报的压测任务实时统计数据 | EN Real-time statistics data of stress test task reported by slave node
message StatsData {
  string slave_id = 1;          // 从节点 ID | EN Slave node ID
  string task_id = 2;           // 任务 ID | EN Task ID
  int64 timestamp = 3;          // 统计数据采集时间戳（毫秒） | EN Statistics collection timestamp (milliseconds)
  int64 total_requests = 4;     // 累计请求总数 | EN Total cumulative requests
  int64 success_count = 5;      // 成功请求数 | EN Number of successful requests
  int64 failed_count = 6;       // 失败请求数 | EN Number of failed requests
  double avg_latency = 7;       // 平均响应延迟（毫秒） | EN Average response latency (milliseconds)
  double p95_latency = 8;       // P95 响应延迟（毫秒）：95%的请求延迟小于该值 | EN P95 response latency (milliseconds): 95% of requests have latency less than this value
  double p99_latency = 9;       // P99 响应延迟（毫秒）：99%的请求延迟小于该值 | EN P99 response latency (milliseconds): 99% of requests have latency less than this value
  double min_latency = 10;      // 最小响应延迟（毫秒） | EN Minimum response latency (milliseconds)
  double max_latency = 11;      // 最大响应延迟（毫秒） | EN Maximum response latency (milliseconds)
  double qps = 12;              // 每秒请求数（Queries Per Second） | EN Queries Per Second
  map<string, int64> status_codes = 13; // HTTP 状态码/GRPC 错误码计数（如 "200": 1000, "500": 50） | EN HTTP status code/GRPC error code count (e.g., "200": 1000, "500": 50)
  map<string, int64> error_types = 14;  // 错误类型计数（如 "timeout": 20, "connection_error": 10） | EN Error type count (e.g., "timeout": 20, "connection_error": 10)
}

// 上报响应 | EN Report Response
// 主节点对统计数据上报的响应 | EN Master node's response to statistics reporting
message ReportResponse {
  bool received = 1;            // 数据是否成功接收 | EN Whether data is received successfully
  string message = 2;           // 接收结果描述 | EN Description of reception result
}

// 下线请求 | EN Unregister Request
// 从节点向主节点发起的下线请求参数 | EN Parameters for slave node to initiate unregistration request to master node
message UnregisterRequest {
  string slave_id = 1;          // 从节点 ID | EN Slave node ID
  string reason = 2;            // 下线原因（如 "正常退出"、"系统升级"） | EN Unregistration reason (e.g., "normal exit", "system upgrade")
}

// 下线响应 | EN Unregister Response
// 主节点对下线请求的响应 | EN Master node's response to unregistration request
message UnregisterResponse {
  bool success = 1;             // 下线是否成功 | EN Whether unregistration is successful
  string message = 2;           // 下线结果描述 | EN Description of unregistration result
}

// 配置更新 | EN Configuration Update
// 主节点向从节点下发的配置更新请求 | EN Configuration update request sent by master node to slave node
message ConfigUpdate {
  string slave_id = 1;          // 从节点 ID | EN Slave node ID
  map<string, string> config = 2; // 键值对形式的配置项（如 "max_workers": "1000"） | EN Key-value configuration items (e.g., "max_workers": "1000")
}

// 更新响应 | EN Update Response
// 从节点对配置更新请求的响应 | EN Slave node's response to configuration update request
message UpdateResponse {
  bool success = 1;             // 配置更新是否成功 | EN Whether configuration update is successful
  string message = 2;           // 更新结果描述（失败时说明原因） | EN Description of update result (explain reason if failed)
}