/*
 * @Author: kamalyes 501893067@qq.com
 * @Date: 2026-01-25 00:00:00
 * @LastEditors: kamalyes 501893067@qq.com
 * @LastEditTime: 2026-01-25 11:57:20
 * @FilePath: \go-stress\bootstrap\master.go
 * @Description: Master æ¨¡å¼å¯åŠ¨å™¨
 *
 * Copyright (c) 2026 by kamalyes, All Rights Reserved.
 */
package bootstrap

import (
	"context"
	"encoding/json"
	"fmt"
	"os"
	"os/signal"
	"syscall"
	"time"

	"github.com/kamalyes/go-logger"
	"github.com/kamalyes/go-stress/config"
	"github.com/kamalyes/go-stress/distributed/common"
	"github.com/kamalyes/go-stress/distributed/master"
)

// MasterOptions Master å¯åŠ¨é€‰é¡¹
type MasterOptions struct {
	GRPCPort    int
	HTTPPort    int
	Secret      string
	Logger      logger.ILogger
	ConfigFile  string // å‹æµ‹ä»»åŠ¡é…ç½®æ–‡ä»¶
	CurlFile    string
	Concurrency uint64
	Requests    uint64
	URL         string
	ConfigFunc  func() *common.TaskConfig // ä»å‘½ä»¤è¡Œæ„å»ºä»»åŠ¡é…ç½®çš„å‡½æ•°
	AutoSubmit  bool                      // æ˜¯å¦è‡ªåŠ¨æäº¤ä»»åŠ¡ï¼ˆæœ‰é…ç½®æ—¶ï¼‰
	WaitSlaves  int                       // ç­‰å¾…çš„æœ€å° Slave æ•°é‡
	WaitTimeout time.Duration             // ç­‰å¾… Slave çš„è¶…æ—¶æ—¶é—´

	// Slave æ•°é‡è®¡ç®—é…ç½®
	WorkersPerSlave int // æ¯ä¸ª Slave æ‰¿æ‹…çš„ Worker æ•°é‡,é»˜è®¤ 100
	MinSlaveCount   int // æœ€å°éœ€è¦çš„ Slave æ•°é‡,é»˜è®¤ 1

	// Master é…ç½®
	HeartbeatInterval time.Duration // å¿ƒè·³é—´éš”,é»˜è®¤ 5s
	HeartbeatTimeout  time.Duration // å¿ƒè·³è¶…æ—¶,é»˜è®¤ 15s
	MaxFailures       int           // æœ€å¤§å¤±è´¥æ¬¡æ•°,é»˜è®¤ 3
	TokenExpiration   time.Duration // Token è¿‡æœŸæ—¶é—´,é»˜è®¤ 24h
	TokenIssuer       string        // Token ç­¾å‘è€…,é»˜è®¤ "go-stress-master"
}

// RunMaster è¿è¡Œ Master èŠ‚ç‚¹
func RunMaster(opts MasterOptions) error {
	opts.Logger.Info("ğŸ¯ å¯åŠ¨ Master èŠ‚ç‚¹...")

	masterCfg := &common.MasterConfig{
		GRPCPort:          opts.GRPCPort,
		HTTPPort:          opts.HTTPPort,
		HeartbeatInterval: opts.HeartbeatInterval, // ç”± master.go ä¸­ mathx.IfZero å…œåº•ä¸º 5s
		HeartbeatTimeout:  opts.HeartbeatTimeout,  // ç”± master.go ä¸­ mathx.IfZero å…œåº•ä¸º 15s
		MaxFailures:       opts.MaxFailures,       // ç”± master.go ä¸­ mathx.IfNotZero å…œåº•ä¸º 3
		Secret:            opts.Secret,            // ç”± master.go ä¸­ mathx.IfEmpty å…œåº•ä¸ºé»˜è®¤å¯†é’¥
		TokenExpiration:   opts.TokenExpiration,   // ç”± master.go ä¸­ mathx.IfZero å…œåº•ä¸º 24h
		TokenIssuer:       opts.TokenIssuer,       // ç”± master.go ä¸­ mathx.IfEmpty å…œåº•ä¸º "go-stress-master"
		WorkersPerSlave:   opts.WorkersPerSlave,   // ç”± master.go ä¸­ mathx.IfNotZero å…œåº•ä¸º 100
		MinSlaveCount:     opts.MinSlaveCount,     // ç”± master.go ä¸­ mathx.IfNotZero å…œåº•ä¸º 1
	}

	m, err := master.NewMaster(masterCfg, opts.Logger)
	if err != nil {
		return fmt.Errorf("åˆ›å»º Master å¤±è´¥: %w", err)
	}

	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()

	// ç›‘å¬ä¿¡å·
	sigCh := make(chan os.Signal, 1)
	signal.Notify(sigCh, os.Interrupt, syscall.SIGTERM)
	go func() {
		<-sigCh
		opts.Logger.Warn("\n\nâš ï¸  æ”¶åˆ°ä¸­æ–­ä¿¡å·ï¼Œæ­£åœ¨åœæ­¢...")
		cancel()
		m.Stop()
	}()

	if err := m.Start(ctx); err != nil {
		return fmt.Errorf("å¯åŠ¨ Master å¤±è´¥: %w", err)
	}

	opts.Logger.Info("âœ… Master èŠ‚ç‚¹è¿è¡Œä¸­...")
	opts.Logger.Info("   gRPC ç«¯å£: %d", opts.GRPCPort)
	opts.Logger.Info("   HTTP ç«¯å£: %d", opts.HTTPPort)

	// å¦‚æœæœ‰ä»»åŠ¡é…ç½®ï¼Œè‡ªåŠ¨æäº¤ä»»åŠ¡
	if opts.AutoSubmit && (opts.ConfigFile != "" || opts.CurlFile != "" || opts.URL != "") {
		if err := autoSubmitTask(ctx, m, opts); err != nil {
			opts.Logger.Errorf("âŒ è‡ªåŠ¨æäº¤ä»»åŠ¡å¤±è´¥: %v", err)
			return err
		}
	} else {
		opts.Logger.Info("\nğŸ’¡ ä½¿ç”¨ä»¥ä¸‹å‘½ä»¤æäº¤ä»»åŠ¡:")
		opts.Logger.Info("   curl -X POST http://localhost:%d/api/v1/tasks \\", opts.HTTPPort)
		opts.Logger.Info("     -H 'Content-Type: application/json' \\")
		opts.Logger.Info("     -d @task_config.json")
	}

	// ç­‰å¾…é€€å‡º
	<-ctx.Done()
	opts.Logger.Info("ğŸ‘‹ Master èŠ‚ç‚¹å·²åœæ­¢")
	return nil
}

// autoSubmitTask è‡ªåŠ¨æäº¤ä»»åŠ¡
func autoSubmitTask(ctx context.Context, m *master.Master, opts MasterOptions) error {
	opts.Logger.Info("\nğŸš€ å‡†å¤‡è‡ªåŠ¨æäº¤åˆ†å¸ƒå¼ä»»åŠ¡...")

	// ç­‰å¾… Slave å°±ç»ª
	if opts.WaitSlaves > 0 {
		opts.Logger.Info("â³ ç­‰å¾…è‡³å°‘ %d ä¸ª Slave èŠ‚ç‚¹å°±ç»ª...", opts.WaitSlaves)
		if err := waitForSlaves(ctx, m, opts.WaitSlaves, opts.WaitTimeout, opts.Logger); err != nil {
			return err
		}
	}

	// æ„å»ºä»»åŠ¡é…ç½®
	var taskConfig *common.Task
	var err error

	if opts.ConfigFile != "" {
		taskConfig, err = loadTaskFromConfigFile(opts.ConfigFile, opts.Logger)
	} else if opts.CurlFile != "" {
		taskConfig, err = loadTaskFromCurlFile(opts.CurlFile, opts)
	} else if opts.ConfigFunc != nil {
		taskCfg := opts.ConfigFunc()
		taskConfig = convertToTask(taskCfg)
	} else if opts.URL != "" {
		taskConfig = buildTaskFromFlags(opts)
	} else {
		return fmt.Errorf("æ²¡æœ‰æä¾›ä»»åŠ¡é…ç½®")
	}

	if err != nil {
		return fmt.Errorf("åŠ è½½ä»»åŠ¡é…ç½®å¤±è´¥: %w", err)
	}

	// æäº¤ä»»åŠ¡
	opts.Logger.Info("ğŸ“¤ æäº¤ä»»åŠ¡åˆ° Master...")
	if err := m.SubmitTask(taskConfig); err != nil {
		return fmt.Errorf("æäº¤ä»»åŠ¡å¤±è´¥: %w", err)
	}

	opts.Logger.Info("âœ… ä»»åŠ¡å·²æäº¤: %s", taskConfig.ID)
	opts.Logger.Info("   ç›®æ ‡: %s", taskConfig.Target)
	opts.Logger.Info("   æ€»å¹¶å‘: %d", taskConfig.TotalWorkers)
	opts.Logger.Info("   æŒç»­æ—¶é—´: %ds", taskConfig.Duration)

	return nil
}

// waitForSlaves ç­‰å¾…æŒ‡å®šæ•°é‡çš„ Slave å°±ç»ª
func waitForSlaves(ctx context.Context, m *master.Master, minCount int, timeout time.Duration, log logger.ILogger) error {
	if timeout == 0 {
		timeout = 30 * time.Second
	}

	deadline := time.Now().Add(timeout)
	ticker := time.NewTicker(1 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return ctx.Err()
		case <-ticker.C:
			count := m.GetSlavePool().Count()
			if count >= minCount {
				log.Info("âœ… %d ä¸ª Slave èŠ‚ç‚¹å·²å°±ç»ª", count)
				return nil
			}

			remaining := time.Until(deadline)
			if remaining <= 0 {
				return fmt.Errorf("ç­‰å¾… Slave è¶…æ—¶ï¼Œå½“å‰: %d, éœ€è¦: %d", count, minCount)
			}

			log.Debug("ç­‰å¾… Slave å°±ç»ª... å½“å‰: %d/%d (å‰©ä½™: %.0fs)", count, minCount, remaining.Seconds())
		}
	}
}

// loadTaskFromConfigFile ä»é…ç½®æ–‡ä»¶åŠ è½½ä»»åŠ¡
func loadTaskFromConfigFile(configFile string, log logger.ILogger) (*common.Task, error) {
	log.Info("ğŸ“„ åŠ è½½ä»»åŠ¡é…ç½®æ–‡ä»¶: %s", configFile)

	cfg, err := config.NewLoader().LoadFromFile(configFile)
	if err != nil {
		return nil, err
	}

	// å°† config.Config è½¬æ¢ä¸º common.Task
	configData, err := json.Marshal(cfg)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–é…ç½®å¤±è´¥: %w", err)
	}

	task := &common.Task{
		Protocol:     string(cfg.Protocol),
		Target:       cfg.URL,
		TotalWorkers: int(cfg.Concurrency),
		Duration:     int(cfg.Requests),
		ConfigData:   configData,
	}

	return task, nil
}

// loadTaskFromCurlFile ä» curl æ–‡ä»¶åŠ è½½ä»»åŠ¡
func loadTaskFromCurlFile(curlFile string, opts MasterOptions) (*common.Task, error) {
	opts.Logger.Info("ğŸ“„ è§£æ curl æ–‡ä»¶: %s", curlFile)

	cfg, err := config.ParseCurlFile(curlFile)
	if err != nil {
		return nil, err
	}

	// è¦†ç›–å‚æ•°
	if opts.Concurrency > 0 {
		cfg.Concurrency = opts.Concurrency
	}
	if opts.Requests > 0 {
		cfg.Requests = opts.Requests
	}

	configData, err := json.Marshal(cfg)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–é…ç½®å¤±è´¥: %w", err)
	}

	task := &common.Task{
		Protocol:     string(cfg.Protocol),
		Target:       cfg.URL,
		TotalWorkers: int(cfg.Concurrency),
		Duration:     int(cfg.Requests),
		ConfigData:   configData,
	}

	return task, nil
}

// buildTaskFromFlags ä»å‘½ä»¤è¡Œå‚æ•°æ„å»ºä»»åŠ¡
func buildTaskFromFlags(opts MasterOptions) *common.Task {
	cfg := &config.Config{
		Protocol:    ProtocolHTTP,
		URL:         opts.URL,
		Concurrency: opts.Concurrency,
		Requests:    opts.Requests,
	}

	configData, _ := json.Marshal(cfg)

	return &common.Task{
		Protocol:     string(cfg.Protocol),
		Target:       cfg.URL,
		TotalWorkers: int(cfg.Concurrency),
		Duration:     int(cfg.Requests),
		ConfigData:   configData,
	}
}

// convertToTask è½¬æ¢ TaskConfig ä¸º Task
func convertToTask(cfg *common.TaskConfig) *common.Task {
	if cfg == nil {
		return nil
	}

	return &common.Task{
		Protocol:     cfg.Protocol,
		Target:       cfg.Target,
		TotalWorkers: int(cfg.WorkerCount),
		Duration:     cfg.Duration,
		RampUp:       cfg.RampUp,
		ConfigData:   cfg.ConfigData,
	}
}
