/*
 * @Author: kamalyes 501893067@qq.com
 * @Date: 2026-01-25 00:00:00
 * @LastEditors: kamalyes 501893067@qq.com
 * @LastEditTime: 2026-01-25 16:30:00
 * @FilePath: \go-stress\bootstrap\slave.go
 * @Description: Slave æ¨¡å¼å¯åŠ¨å™¨
 *
 * Copyright (c) 2026 by kamalyes, All Rights Reserved.
 */
package bootstrap

import (
	"context"
	"fmt"
	"os"
	"os/signal"
	"syscall"
	"time"

	"github.com/kamalyes/go-logger"
	"github.com/kamalyes/go-stress/distributed/common"
	"github.com/kamalyes/go-stress/distributed/slave"
	"github.com/kamalyes/go-toolbox/pkg/random"
)

// SlaveOptions Slave å¯åŠ¨é€‰é¡¹
type SlaveOptions struct {
	SlaveID        string
	MasterAddr     string
	GRPCPort       int
	RealtimePort   int // å®æ—¶æŠ¥å‘ŠæœåŠ¡å™¨ç«¯å£ï¼ˆ0è¡¨ç¤ºç¦ç”¨ï¼Œé»˜è®¤è‡ªåŠ¨åˆ†é…ï¼‰
	Region         string
	MaxConcurrency int
	CanReuse       bool
	Logger         logger.ILogger
}

// RunSlave è¿è¡Œ Slave èŠ‚ç‚¹
func RunSlave(opts SlaveOptions) error {
	opts.Logger.Info("ğŸ¤– å¯åŠ¨ Slave èŠ‚ç‚¹...")

	if opts.MasterAddr == "" {
		return fmt.Errorf("Slave æ¨¡å¼å¿…é¡»æŒ‡å®š Master åœ°å€")
	}

	// è‡ªåŠ¨ç”Ÿæˆ Slave ID
	if opts.SlaveID == "" {
		opts.SlaveID = fmt.Sprintf("slave-%s-%d", opts.Region, time.Now().Unix())
		opts.Logger.InfoKV("ğŸ“ è‡ªåŠ¨ç”Ÿæˆ Slave ID", "slave_id", opts.SlaveID)
	}

	// è®¾ç½®é»˜è®¤å€¼
	if opts.MaxConcurrency <= 0 {
		opts.MaxConcurrency = 5
	}

	// å¦‚æœæœªæŒ‡å®šå®æ—¶æŠ¥å‘Šç«¯å£ï¼Œåˆ™è‡ªåŠ¨åˆ†é…ä¸€ä¸ªå¯ç”¨ç«¯å£
	if opts.RealtimePort == 0 {
		// æ„å»ºç«¯å£å€™é€‰åˆ—è¡¨ï¼ˆ8088-8187ï¼Œæ”¯æŒ100ä¸ªslaveï¼‰
		ports := make([]int, 100)
		for i := 0; i < 100; i++ {
			ports[i] = 8088 + i
		}
		if port, err := random.GenerateAvailablePort(ports...); err == nil {
			opts.RealtimePort = port
			opts.Logger.InfoKV("è‡ªåŠ¨åˆ†é…å®æ—¶æŠ¥å‘Šç«¯å£", "port", port)
		} else {
			opts.Logger.WarnKV("æ— æ³•åˆ†é…å®æ—¶æŠ¥å‘Šç«¯å£ï¼Œå°†ç¦ç”¨å®æ—¶æŠ¥å‘ŠåŠŸèƒ½", "error", err)
			opts.RealtimePort = 0 // ç¦ç”¨å®æ—¶æŠ¥å‘Š
		}
	}

	slaveCfg := &common.SlaveConfig{
		SlaveID:         opts.SlaveID,
		MasterAddr:      opts.MasterAddr,
		GRPCPort:        int32(opts.GRPCPort),
		RealtimePort:    opts.RealtimePort,
		Region:          opts.Region,
		Labels:          map[string]string{"region": opts.Region},
		MaxConcurrency:  opts.MaxConcurrency,
		CanReuse:        opts.CanReuse,
		ReportBuffer:    1000,
		ReportInterval:  5 * time.Second,
		ResourceMonitor: true,
	}

	s, err := slave.NewSlave(slaveCfg, opts.Logger)
	if err != nil {
		return fmt.Errorf("åˆ›å»º Slave å¤±è´¥: %w", err)
	}

	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()

	// ç›‘å¬ä¿¡å·
	sigCh := make(chan os.Signal, 1)
	signal.Notify(sigCh, os.Interrupt, syscall.SIGTERM)
	go func() {
		<-sigCh
		opts.Logger.Warn("\n\nâš ï¸  æ”¶åˆ°ä¸­æ–­ä¿¡å·ï¼Œæ­£åœ¨åœæ­¢...")
		cancel()
		s.Stop()
	}()

	if err := s.Start(ctx); err != nil {
		return fmt.Errorf("å¯åŠ¨ Slave å¤±è´¥: %w", err)
	}

	opts.Logger.Info("âœ… Slave èŠ‚ç‚¹è¿è¡Œä¸­...")
	opts.Logger.InfoKV("   Slave ID", "id", opts.SlaveID)
	opts.Logger.InfoKV("   Master åœ°å€", "addr", opts.MasterAddr)
	opts.Logger.InfoKV("   gRPC ç«¯å£", "port", opts.GRPCPort)
	if opts.RealtimePort > 0 {
		opts.Logger.InfoKV("   å®æ—¶æŠ¥å‘Šç«¯å£", "realtime_port", opts.RealtimePort)
	}
	opts.Logger.InfoKV("   åŒºåŸŸ", "region", opts.Region)
	opts.Logger.InfoKV("   æœ€å¤§å¹¶å‘", "max_concurrency", opts.MaxConcurrency)

	// ç­‰å¾…é€€å‡º
	<-ctx.Done()
	opts.Logger.Info("ğŸ‘‹ Slave èŠ‚ç‚¹å·²åœæ­¢")
	return nil
}
