/*
 * @Author: kamalyes 501893067@qq.com
 * @Date: 2025-12-30 00:00:00
 * @LastEditors: kamalyes 501893067@qq.com
 * @LastEditTime: 2025-12-30 10:39:00
 * @FilePath: \go-stress\statistics\report.go
 * @Description: ç»Ÿè®¡æŠ¥å‘Š
 *
 * Copyright (c) 2025 by kamalyes, All Rights Reserved.
 */
package statistics

import (
	"encoding/json"
	"fmt"
	"time"

	"github.com/kamalyes/go-logger"
	"github.com/kamalyes/go-toolbox/pkg/units"
)

// Report ç»Ÿè®¡æŠ¥å‘Š - ç»Ÿä¸€çš„æ•°æ®ç»“æ„ï¼ŒåŒæ—¶æ”¯æŒé™æ€å’Œå®æ—¶æŠ¥å‘Š
type Report struct {
	// åŸºç¡€ç»Ÿè®¡
	TotalRequests   uint64  `json:"total_requests"`
	SuccessRequests uint64  `json:"success_requests"`
	FailedRequests  uint64  `json:"failed_requests"`
	SkippedRequests uint64  `json:"skipped_requests"` // è·³è¿‡è¯·æ±‚æ•°
	SuccessRate     float64 `json:"success_rate"`     // ç™¾åˆ†æ¯” 0-100

	// æ—¶é—´ç»Ÿè®¡
	TotalTime  time.Duration `json:"total_time"`
	MinLatency time.Duration `json:"min_latency"`
	MaxLatency time.Duration `json:"max_latency"`
	AvgLatency time.Duration `json:"avg_latency"`

	// ç™¾åˆ†ä½ç»Ÿè®¡
	P50Latency time.Duration `json:"p50_latency"`
	P90Latency time.Duration `json:"p90_latency"`
	P95Latency time.Duration `json:"p95_latency"`
	P99Latency time.Duration `json:"p99_latency"`

	// æ€§èƒ½æŒ‡æ ‡
	QPS       float64 `json:"qps"`
	TotalSize float64 `json:"total_size"` // å­—èŠ‚æ•°

	// é”™è¯¯ç»Ÿè®¡
	Errors map[string]uint64 `json:"errors,omitempty"`

	// çŠ¶æ€ç ç»Ÿè®¡
	StatusCodes map[int]uint64 `json:"status_codes,omitempty"`

	// è¯·æ±‚æ˜ç»†ï¼ˆé™æ€æŠ¥å‘Šç”¨ï¼Œå®æ—¶æŠ¥å‘Šä¸åŠ è½½ï¼‰
	RequestDetails []*RequestResult `json:"request_details,omitempty"`

	// === å®æ—¶æŠ¥å‘Šä¸“ç”¨å­—æ®µ ===
	Timestamp       int64   `json:"timestamp,omitempty"`        // Unixæ—¶é—´æˆ³
	Elapsed         int64   `json:"elapsed_seconds"`            // å·²è€—æ—¶ï¼ˆç§’ï¼‰- ç§»é™¤omitemptyç¡®ä¿å§‹ç»ˆè¾“å‡º
	IsCompleted     bool    `json:"is_completed,omitempty"`     // æ˜¯å¦å®Œæˆ
	IsPaused        bool    `json:"is_paused,omitempty"`        // æ˜¯å¦æš‚åœ
	IsStopped       bool    `json:"is_stopped,omitempty"`       // æ˜¯å¦åœæ­¢
	RecentDurations []int64 `json:"recent_durations,omitempty"` // æœ€è¿‘å“åº”æ—¶é—´ï¼ˆæ¯«ç§’ï¼‰ç”¨äºå®æ—¶å›¾è¡¨

	// è¿è¡Œæ¨¡å¼æ ‡è¯†
	RunMode RunMode `json:"run_mode,omitempty"`

	// é…ç½®ä¿¡æ¯ï¼ˆç”¨äºæŠ¥å‘Šæ˜¾ç¤ºï¼‰
	Protocol    string `json:"protocol,omitempty"`    // åè®®ç±»å‹: http/grpc/websocket
	Concurrency uint64 `json:"concurrency,omitempty"` // å¹¶å‘æ•°
	TotalReqs   uint64 `json:"total_reqs,omitempty"`  // è®¡åˆ’è¯·æ±‚æ•°
	logger      logger.ILogger
}

// Print æ‰“å°æŠ¥å‘Šï¼ˆä½¿ç”¨å•ä¸ªå¤šåˆ—è¡¨æ ¼ï¼‰
func (r *Report) Print() {
	r.logger.Info("ğŸ“Š å‹æµ‹ç»Ÿè®¡æŠ¥å‘Š")

	// æ„å»ºå•ä¸ªç»Ÿä¸€è¡¨æ ¼
	reportData := []map[string]interface{}{
		{
			"åˆ†ç±»":  "ğŸ“ˆ åŸºç¡€ç»Ÿè®¡",
			"æŒ‡æ ‡":  "æ€»è¯·æ±‚æ•°",
			"å€¼":   fmt.Sprintf("%d", r.TotalRequests),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "æœ€å°è€—æ—¶",
			"å€¼2":  r.MinLatency.String(),
		},
		{
			"åˆ†ç±»":  "ğŸ“ˆ åŸºç¡€ç»Ÿè®¡",
			"æŒ‡æ ‡":  "æˆåŠŸè¯·æ±‚",
			"å€¼":   fmt.Sprintf("%d", r.SuccessRequests),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "æœ€å¤§è€—æ—¶",
			"å€¼2":  r.MaxLatency.String(),
		},
		{
			"åˆ†ç±»":  "ğŸ“ˆ åŸºç¡€ç»Ÿè®¡",
			"æŒ‡æ ‡":  "å¤±è´¥è¯·æ±‚",
			"å€¼":   fmt.Sprintf("%d", r.FailedRequests),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "å¹³å‡è€—æ—¶",
			"å€¼2":  r.AvgLatency.String(),
		},
		{
			"åˆ†ç±»":  "ğŸ“ˆ åŸºç¡€ç»Ÿè®¡",
			"æŒ‡æ ‡":  "æˆåŠŸç‡",
			"å€¼":   fmt.Sprintf("%.2f%%", r.SuccessRate),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "P50",
			"å€¼2":  r.P50Latency.String(),
		},
		{
			"åˆ†ç±»":  "âš¡ æ€§èƒ½æŒ‡æ ‡",
			"æŒ‡æ ‡":  "æ€»è€—æ—¶",
			"å€¼":   r.TotalTime.String(),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "P90",
			"å€¼2":  r.P90Latency.String(),
		},
		{
			"åˆ†ç±»":  "âš¡ æ€§èƒ½æŒ‡æ ‡",
			"æŒ‡æ ‡":  "QPS",
			"å€¼":   fmt.Sprintf("%.2f", r.QPS),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "P95",
			"å€¼2":  r.P95Latency.String(),
		},
		{
			"åˆ†ç±»":  "âš¡ æ€§èƒ½æŒ‡æ ‡",
			"æŒ‡æ ‡":  "ä¼ è¾“æ•°æ®",
			"å€¼":   units.BytesSize(float64(r.TotalSize)),
			"åˆ†ç±»2": "â±ï¸  å“åº”æ—¶é—´",
			"æŒ‡æ ‡2": "P99",
			"å€¼2":  r.P99Latency.String(),
		},
	}

	r.logger.ConsoleTable(reportData)

	// é”™è¯¯ç»Ÿè®¡ï¼ˆå¦‚æœæœ‰ï¼‰
	if len(r.Errors) > 0 {
		errorStats := make([]map[string]interface{}, 0, len(r.Errors))
		for errMsg, count := range r.Errors {
			// æˆªæ–­è¿‡é•¿çš„é”™è¯¯ä¿¡æ¯
			if len(errMsg) > 80 {
				errMsg = errMsg[:77] + "..."
			}
			errorStats = append(errorStats, map[string]interface{}{
				"é”™è¯¯ä¿¡æ¯": errMsg,
				"æ¬¡æ•°":   count,
			})
		}
		r.logger.ConsoleTable(errorStats)
	}
}

// Summary è¿”å›ç®€çŸ­æ‘˜è¦
func (r *Report) Summary() string {
	return fmt.Sprintf(
		"è¯·æ±‚: %d | æˆåŠŸç‡: %.2f%% | QPS: %.2f | å¹³å‡è€—æ—¶: %s",
		r.TotalRequests,
		r.SuccessRate,
		r.QPS,
		r.AvgLatency,
	)
}

// MarshalJSON è‡ªå®šä¹‰JSONåºåˆ—åŒ–ï¼Œå°†time.Durationè½¬æ¢ä¸ºæ¯«ç§’
func (r *Report) MarshalJSON() ([]byte, error) {
	type Alias Report
	return json.Marshal(&struct {
		*Alias
		// æ·»åŠ æ¯«ç§’æ ¼å¼çš„å­—æ®µä¾›å‰ç«¯ä½¿ç”¨
		AvgLatency  float64 `json:"avg_latency"`
		MinLatency  float64 `json:"min_latency"`
		MaxLatency  float64 `json:"max_latency"`
		P50Latency  float64 `json:"p50_latency"`
		P90Latency  float64 `json:"p90_latency"`
		P95Latency  float64 `json:"p95_latency"`
		P99Latency  float64 `json:"p99_latency"`
		TotalTimeMs float64 `json:"total_time_ms"`
	}{
		Alias:       (*Alias)(r),
		AvgLatency:  float64(r.AvgLatency.Microseconds()) / 1000.0,
		MinLatency:  float64(r.MinLatency.Microseconds()) / 1000.0,
		MaxLatency:  float64(r.MaxLatency.Microseconds()) / 1000.0,
		P50Latency:  float64(r.P50Latency.Microseconds()) / 1000.0,
		P90Latency:  float64(r.P90Latency.Microseconds()) / 1000.0,
		P95Latency:  float64(r.P95Latency.Microseconds()) / 1000.0,
		P99Latency:  float64(r.P99Latency.Microseconds()) / 1000.0,
		TotalTimeMs: float64(r.TotalTime.Microseconds()) / 1000.0,
	})
}
