/*
 * @Author: kamalyes 501893067@qq.com
 * @Date: 2025-12-30 00:00:00
 * @LastEditors: kamalyes 501893067@qq.com
 * @LastEditTime: 2026-01-25 11:57:55
 * @FilePath: \go-stress\main.go
 * @Description: å‹æµ‹å·¥å…·ä¸»å…¥å£
 *
 * Copyright (c) 2025 by kamalyes, All Rights Reserved.
 */
package main

import (
	"flag"
	"fmt"
	"os"
	"time"

	"github.com/kamalyes/go-stress/bootstrap"
	"github.com/kamalyes/go-stress/config"
	"github.com/kamalyes/go-stress/logger"
	"github.com/kamalyes/go-stress/types"
)

var (
	// åŸºç¡€å‚æ•°
	configFile  string
	curlFile    string
	protocol    string
	concurrency uint64
	requests    uint64
	url         string
	method      string
	timeout     time.Duration

	// HTTPå‚æ•°
	http2     bool
	keepalive bool

	// gRPCå‚æ•°
	grpcReflection bool
	grpcService    string
	grpcMethod     string

	// å…¶ä»–
	body    string
	headers arrayFlags

	// æ—¥å¿—é…ç½®
	logLevel string
	logFile  string
	quiet    bool
	verbose  bool

	// æŠ¥å‘Šé…ç½®
	reportPrefix string            // æŠ¥å‘Šæ–‡ä»¶åå‰ç¼€
	storageMode  types.StorageMode // å­˜å‚¨æ¨¡å¼ (memory/db)

	// å†…å­˜é™åˆ¶
	maxMemory string // å†…å­˜ä½¿ç”¨é˜ˆå€¼

	// åˆ†å¸ƒå¼å‚æ•°
	mode         types.RunMode // è¿è¡Œæ¨¡å¼: standalone/master/slave
	masterAddr   string        // Master åœ°å€ (Slave æ¨¡å¼ä½¿ç”¨)
	slaveID      string        // Slave ID (Slave æ¨¡å¼ä½¿ç”¨)
	grpcPort     int           // gRPC ç«¯å£
	httpPort     int           // HTTP ç«¯å£ (Master æ¨¡å¼ä½¿ç”¨)
	realtimePort int           // å®æ—¶æŠ¥å‘Šç«¯å£ (Slave æ¨¡å¼ä½¿ç”¨)
	region       string        // èŠ‚ç‚¹åŒºåŸŸæ ‡ç­¾

	// Slave æ•°é‡è®¡ç®—é…ç½® (Master æ¨¡å¼)
	workersPerSlave int // æ¯ä¸ª Slave æ‰¿æ‹…çš„ Worker æ•°é‡
	minSlaveCount   int // æœ€å°éœ€è¦çš„ Slave æ•°é‡

	// Master é…ç½® (Master æ¨¡å¼)
	heartbeatInterval time.Duration // å¿ƒè·³é—´éš”
	heartbeatTimeout  time.Duration // å¿ƒè·³è¶…æ—¶
	maxFailures       int           // æœ€å¤§å¤±è´¥æ¬¡æ•°
	tokenExpiration   time.Duration // Token è¿‡æœŸæ—¶é—´
	tokenIssuer       string        // Token ç­¾å‘è€…
	masterSecret      string        // Master å¯†é’¥
)

// arrayFlags æ•°ç»„flag
type arrayFlags []string

func (a *arrayFlags) String() string {
	return fmt.Sprintf("%v", *a)
}

func (a *arrayFlags) Set(value string) error {
	*a = append(*a, value)
	return nil
}

func init() {
	// è®¾ç½®é»˜è®¤å€¼
	storageMode = types.StorageModeMemory
	mode = types.RunModeStandaloneCLI

	// åŸºç¡€å‚æ•°
	flag.StringVar(&configFile, "config", "", "é…ç½®æ–‡ä»¶è·¯å¾„ (yaml/json)")
	flag.StringVar(&curlFile, "curl", "", "curlå‘½ä»¤æ–‡ä»¶è·¯å¾„")
	flag.StringVar(&protocol, "protocol", "http", "åè®®ç±»å‹ (http/grpc/websocket)")
	flag.Uint64Var(&concurrency, "c", 1, "å¹¶å‘æ•°")
	flag.Uint64Var(&requests, "n", 1, "æ¯ä¸ªå¹¶å‘çš„è¯·æ±‚æ•°")
	flag.StringVar(&url, "url", "", "ç›®æ ‡URL")
	flag.StringVar(&method, "method", "GET", "è¯·æ±‚æ–¹æ³•")
	flag.DurationVar(&timeout, "timeout", 30*time.Second, "è¯·æ±‚è¶…æ—¶æ—¶é—´")

	// HTTPå‚æ•°
	flag.BoolVar(&http2, "http2", false, "ä½¿ç”¨HTTP/2")
	flag.BoolVar(&keepalive, "keepalive", false, "ä½¿ç”¨é•¿è¿æ¥")

	// gRPCå‚æ•°
	flag.BoolVar(&grpcReflection, "grpc-reflection", false, "ä½¿ç”¨gRPCåå°„")
	flag.StringVar(&grpcService, "grpc-service", "", "gRPCæœåŠ¡å")
	flag.StringVar(&grpcMethod, "grpc-method", "", "gRPCæ–¹æ³•å")

	// å…¶ä»–
	flag.StringVar(&body, "data", "", "è¯·æ±‚ä½“æ•°æ®")
	flag.Var(&headers, "H", "è¯·æ±‚å¤´ (å¯å¤šæ¬¡ä½¿ç”¨)")

	// æ—¥å¿—é…ç½®
	flag.StringVar(&logLevel, "log-level", "info", "æ—¥å¿—çº§åˆ« (debug/info/warn/error)")
	flag.StringVar(&logFile, "log-file", "", "æ—¥å¿—æ–‡ä»¶è·¯å¾„")
	flag.BoolVar(&quiet, "quiet", false, "é™é»˜æ¨¡å¼ï¼ˆä»…é”™è¯¯ï¼‰")
	flag.BoolVar(&verbose, "verbose", false, "è¯¦ç»†æ¨¡å¼ï¼ˆåŒ…å«è°ƒè¯•ä¿¡æ¯ï¼‰")

	// æŠ¥å‘Šé…ç½®
	flag.StringVar(&reportPrefix, "report-prefix", "stress-report", "æŠ¥å‘Šæ–‡ä»¶åå‰ç¼€")
	flag.Var(&storageMode, "storage", "å­˜å‚¨æ¨¡å¼ (memory:å†…å­˜æ¨¡å¼ | sqlite:æŒä¹…åŒ–åˆ°SQLiteæ–‡ä»¶)")

	// å†…å­˜é™åˆ¶
	flag.StringVar(&maxMemory, "max-memory", "", "å†…å­˜ä½¿ç”¨é˜ˆå€¼ï¼Œè¶…è¿‡åè‡ªåŠ¨åœæ­¢æµ‹è¯• (å¦‚: 1GB, 512MB, 2048KB)")

	// åˆ†å¸ƒå¼å‚æ•°
	flag.Var(&mode, "mode", "è¿è¡Œæ¨¡å¼ (standalone/master/slave)")
	flag.StringVar(&masterAddr, "master", "", "MasterèŠ‚ç‚¹åœ°å€ (Slaveæ¨¡å¼å¿…éœ€, å¦‚: localhost:9090)")
	flag.StringVar(&slaveID, "slave-id", "", "SlaveèŠ‚ç‚¹ID (å¯é€‰,ä¸æŒ‡å®šåˆ™è‡ªåŠ¨ç”Ÿæˆ)")
	flag.IntVar(&grpcPort, "grpc-port", 9090, "gRPCæœåŠ¡ç«¯å£")
	flag.IntVar(&httpPort, "http-port", 8080, "HTTPæœåŠ¡ç«¯å£ (Masteræ¨¡å¼)")
	flag.IntVar(&realtimePort, "realtime-port", 0, "å®æ—¶æŠ¥å‘ŠæœåŠ¡å™¨ç«¯å£ (Slaveæ¨¡å¼, 0è¡¨ç¤ºè‡ªåŠ¨åˆ†é…)")
	flag.StringVar(&region, "region", "default", "èŠ‚ç‚¹åŒºåŸŸæ ‡ç­¾")

	// Slave æ•°é‡è®¡ç®—é…ç½® (Master æ¨¡å¼)
	flag.IntVar(&workersPerSlave, "workers-per-slave", 100, "æ¯ä¸ª Slave æ‰¿æ‹…çš„ Worker æ•°é‡ (é»˜è®¤100)")
	flag.IntVar(&minSlaveCount, "min-slave-count", 1, "æœ€å°éœ€è¦çš„ Slave æ•°é‡ (é»˜è®¤1)")

	// Master é…ç½® (Master æ¨¡å¼)
	flag.DurationVar(&heartbeatInterval, "heartbeat-interval", 5*time.Second, "å¿ƒè·³é—´éš” (é»˜è®¤5s)")
	flag.DurationVar(&heartbeatTimeout, "heartbeat-timeout", 15*time.Second, "å¿ƒè·³è¶…æ—¶ (é»˜è®¤15s)")
	flag.IntVar(&maxFailures, "max-failures", 3, "æœ€å¤§å¤±è´¥æ¬¡æ•° (é»˜è®¤3)")
	flag.DurationVar(&tokenExpiration, "token-expiration", 24*time.Hour, "Tokenè¿‡æœŸæ—¶é—´ (é»˜è®¤24h)")
	flag.StringVar(&tokenIssuer, "token-issuer", "go-stress-master", "Tokenç­¾å‘è€…")
	flag.StringVar(&masterSecret, "master-secret", "go-stress-secret-key", "Masterå¯†é’¥")
}

func main() {
	flag.Parse()

	// åˆå§‹åŒ–æ—¥å¿—å™¨
	initLogger()

	// å¤„ç†å­å‘½ä»¤
	if len(os.Args) >= 2 {
		switch os.Args[1] {
		case "help", "-h", "--help":
			printBanner()
			printSimpleUsage()
			os.Exit(0)
		case "variables", "vars", "-vars":
			printBanner()
			printVariablesHelp()
			os.Exit(0)
		case "examples", "demo", "-demo":
			printBanner()
			printExamplesHelp()
			os.Exit(0)
		case "version", "-v", "--version":
			printVersion()
			os.Exit(0)
		}
	}

	// å¦‚æœæ²¡æœ‰ä»»ä½•å‚æ•°ï¼Œæ˜¾ç¤ºç®€åŒ–å¸®åŠ©ä¿¡æ¯
	if len(os.Args) == 1 {
		printBanner()
		printSimpleUsage()
		os.Exit(0)
	}

	// æ‰“å°banner
	printBanner()

	// æ ¹æ®è¿è¡Œæ¨¡å¼é€‰æ‹©æ‰§è¡Œè·¯å¾„
	switch mode {
	case types.RunModeMaster:
		runMasterMode()
	case types.RunModeSlave:
		runSlaveMode()
	default:
		runStandaloneMode()
	}
}

// buildConfigFromFlags ä»å‘½ä»¤è¡Œå‚æ•°æ„å»ºé…ç½®
func buildConfigFromFlags() *config.Config {
	cfg := config.DefaultConfig()

	cfg.Protocol = types.ProtocolType(protocol)
	cfg.Concurrency = concurrency
	cfg.Requests = requests
	cfg.URL = url
	cfg.Method = method
	cfg.Timeout = timeout
	cfg.Body = body

	// è§£æHeaders
	cfg.Headers = make(map[string]string)
	for _, h := range headers {
		parseHeader(h, cfg.Headers)
	}

	// HTTPé…ç½®
	if cfg.Protocol == types.ProtocolHTTP {
		cfg.HTTP = &config.HTTPConfig{
			HTTP2:           http2,
			KeepAlive:       keepalive,
			FollowRedirects: true,
			MaxConnsPerHost: 100,
		}
	}

	// gRPCé…ç½®
	if cfg.Protocol == types.ProtocolGRPC {
		cfg.GRPC = &config.GRPCConfig{
			UseReflection: grpcReflection,
			Service:       grpcService,
			Method:        grpcMethod,
			Metadata:      make(map[string]string),
		}
	}

	return cfg
}

// initLogger åˆå§‹åŒ–æ—¥å¿—å™¨
func initLogger() {
	config := logger.DefaultConfig()

	// ä¼˜å…ˆçº§ï¼šverbose > quiet > logLevel
	switch {
	case verbose:
		config = config.WithLevel(logger.DEBUG).WithShowCaller(true).WithTimeFormat("2006-01-02 15:04:05.000")
	case quiet:
		config = config.WithLevel(logger.ERROR)
	default:
		config = config.WithLevel(logger.ParseLogLevel(logLevel))
	}

	// é…ç½®è¾“å‡º
	if logFile != "" {
		rotateWriter := logger.NewRotateWriter(logFile, 100*1024*1024, 5)
		config = config.WithOutput(rotateWriter).WithColorful(false)
	}

	logger.SetDefault(logger.New(config))
}

// parseHeader è§£æè¯·æ±‚å¤´å­—ç¬¦ä¸²
func parseHeader(header string, headers map[string]string) {
	for i := 0; i < len(header); i++ {
		if header[i] == ':' {
			key := header[:i]
			value := header[i+1:]
			// å»é™¤å‰åç©ºæ ¼
			for len(value) > 0 && value[0] == ' ' {
				value = value[1:]
			}
			headers[key] = value
			return
		}
	}
}

// printBanner æ‰“å°å¯åŠ¨banner
func printBanner() {
	logger.Default.Info(`
â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
â•‘                                                          â•‘
â•‘     âš¡ Go Stress Testing Tool âš¡                         â•‘
â•‘                                                          â•‘
â•‘     ğŸš€ é«˜æ€§èƒ½å‹æµ‹å·¥å…·                                     â•‘
â•‘     ğŸ”§ æ”¯æŒ HTTP / gRPC / WebSocket                      â•‘
â•‘     âš™ï¸  åŸºäº go-toolbox å·¥å…·åº“                           â•‘
â•‘                                                          â•‘
â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
`)
}

// printVersion æ‰“å°ç‰ˆæœ¬ä¿¡æ¯
func printVersion() {
	fmt.Println("go-stress version 1.0.0")
	fmt.Println("é«˜æ€§èƒ½ HTTP/gRPC/WebSocket å‹æµ‹å·¥å…·")
}

// printSimpleUsage æ‰“å°ç®€åŒ–çš„ä½¿ç”¨è¯´æ˜
func printSimpleUsage() {
	printHeader("ä½¿ç”¨æ–¹æ³•:")
	flag.Usage()

	fmt.Println("\nå¸¸ç”¨å­å‘½ä»¤:")
	fmt.Println("  go-stress help          - æ˜¾ç¤ºå®Œæ•´å¸®åŠ©ä¿¡æ¯")
	fmt.Println("  go-stress variables     - æ˜¾ç¤ºæ‰€æœ‰å¯ç”¨å˜é‡å‡½æ•°")
	fmt.Println("  go-stress examples      - æ˜¾ç¤ºè¯¦ç»†ä½¿ç”¨ç¤ºä¾‹")
	fmt.Println("  go-stress version       - æ˜¾ç¤ºç‰ˆæœ¬ä¿¡æ¯")

	fmt.Println("\nå¿«é€Ÿå¼€å§‹:")
	fmt.Println("  # HTTPå‹æµ‹")
	fmt.Println("  go-stress -url https://example.com -c 10 -n 100")
	fmt.Println("")
	fmt.Println("  # ä½¿ç”¨é…ç½®æ–‡ä»¶")
	fmt.Println("  go-stress -config config.yaml")
	fmt.Println("")
	fmt.Println("  # Masteræ¨¡å¼ï¼ˆåˆ†å¸ƒå¼ï¼‰")
	fmt.Println("  go-stress -mode master -config config.yaml")
	fmt.Println("")
	fmt.Println("  # Slaveæ¨¡å¼")
	fmt.Println("  go-stress -mode slave -master localhost:9090")

	fmt.Println("\nğŸ’¡ æç¤º: ä½¿ç”¨ 'go-stress variables' æŸ¥çœ‹æ‰€æœ‰å‚æ•°åŒ–å˜é‡")
	fmt.Println("ğŸ’¡ æç¤º: ä½¿ç”¨ 'go-stress examples' æŸ¥çœ‹è¯¦ç»†ç¤ºä¾‹")
}

// printVariablesHelp æ‰“å°å˜é‡åŠŸèƒ½å¸®åŠ©
func printVariablesHelp() {
	resolver := config.NewVariableResolver()

	printHeader("å˜é‡åŠŸèƒ½è¯´æ˜:")
	fmt.Println("  æ”¯æŒåœ¨ URLã€è¯·æ±‚ä½“ã€è¯·æ±‚å¤´ä¸­ä½¿ç”¨å˜é‡ï¼Œä½¿ç”¨ {{variable}} æˆ– {{function}} è¯­æ³•")
	fmt.Println("")

	printHeader("åŸºæœ¬ç”¨æ³•:")
	printVariableExamples(resolver)

	printHeader("æ‰€æœ‰å¯ç”¨å˜é‡å‡½æ•°:")
	printAvailableFunctions(resolver)

	fmt.Println("\nğŸ’¡ è¯¦ç»†æ–‡æ¡£: docs/VARIABLES.md")
}

// printExamplesHelp æ‰“å°ç¤ºä¾‹å¸®åŠ©
func printExamplesHelp() {
	printHeader("åŸºæœ¬ç¤ºä¾‹:")
	printExamples()

	printHeader("é…ç½®æ–‡ä»¶ç¤ºä¾‹ (config.yaml):")
	printConfigExample()

	fmt.Println("\næ›´å¤šç¤ºä¾‹:")
	fmt.Println("  # ä½¿ç”¨å˜é‡")
	fmt.Println("  go-stress -url 'https://api.example.com/user/{{seq}}' -c 10 -n 100")
	fmt.Println("")
	fmt.Println("  # è‡ªå®šä¹‰è¯·æ±‚å¤´")
	fmt.Println("  go-stress -url https://api.example.com -H 'Authorization: Bearer token' -H 'X-Request-ID: {{randomUUID}}'")
	fmt.Println("")
	fmt.Println("  # å†…å­˜é™åˆ¶")
	fmt.Println("  go-stress -config config.yaml -max-memory 1GB")
	fmt.Println("")
	fmt.Println("  # æŒä¹…åŒ–å­˜å‚¨")
	fmt.Println("  go-stress -config config.yaml -storage sqlite")
	fmt.Println("")
	fmt.Println("  # åˆ†å¸ƒå¼å‹æµ‹ (Master)")
	fmt.Println("  go-stress -mode master -http-port 8080 -grpc-port 9090 -config config.yaml")
	fmt.Println("")
	fmt.Println("  # åˆ†å¸ƒå¼å‹æµ‹ (Slave)")
	fmt.Println("  go-stress -mode slave -master localhost:9090 -region us-west")

	fmt.Println("\nğŸ’¡ å®Œæ•´æ–‡æ¡£:")
	fmt.Println("  - å¿«é€Ÿå¼€å§‹: docs/GETTING_STARTED.md")
	fmt.Println("  - é…ç½®æ–‡ä»¶: docs/CONFIG_FILE.md")
	fmt.Println("  - å‘½ä»¤å‚è€ƒ: docs/CLI_REFERENCE.md")
	fmt.Println("  - åˆ†å¸ƒå¼æ¨¡å¼: docs/DISTRIBUTED_MODE.md")
	fmt.Println("  - å˜é‡å‡½æ•°: docs/VARIABLES.md")
}

func printHeader(title string) {
	fmt.Println("\n" + title)
}

func printExamples() {
	examples := []string{
		"# ç®€å•HTTPå‹æµ‹",
		"go-stress -url https://example.com -c 10 -n 100",
		"",
		"# POSTè¯·æ±‚",
		"go-stress -url https://api.example.com/users -method POST -data '{\"name\":\"test\"}' -H \"Content-Type: application/json\" -c 5 -n 50",
		"",
		"# ä½¿ç”¨é…ç½®æ–‡ä»¶",
		"go-stress -config config.yaml",
		"",
		"# ä½¿ç”¨curlæ–‡ä»¶",
		"go-stress -curl requests.txt -c 10 -n 100",
		"",
		"# è‡ªå®šä¹‰æŠ¥å‘Šå‰ç¼€",
		"go-stress -url https://example.com -c 10 -n 100 -report-prefix my-test",
		"",
		"# gRPCå‹æµ‹",
		"go-stress -protocol grpc -url localhost:50051 -grpc-reflection -grpc-service myservice -grpc-method MyMethod -c 5 -n 50",
		"",
		"# WebSocketå‹æµ‹",
		"go-stress -protocol websocket -url ws://localhost:8080/ws -body '{\"action\":\"ping\"}' -c 10 -n 100",
		"",
		"# å®æ—¶ç›‘æ§",
		"è¿è¡Œåè‡ªåŠ¨æ‰“å¼€æµè§ˆå™¨æŸ¥çœ‹å®æ—¶æŠ¥å‘Šï¼ˆé»˜è®¤ç«¯å£: 8088ï¼Œå¯é€šè¿‡é…ç½®æ–‡ä»¶çš„ realtime_port ä¿®æ”¹ï¼‰",
		"æµ‹è¯•å®Œæˆåç”Ÿæˆé™æ€HTMLæŠ¥å‘Š: stress-report-{æ—¶é—´æˆ³}.html",
	}
	for _, example := range examples {
		fmt.Println(example)
	}
}

func printVariableExamples(resolver *config.VariableResolver) {
	seqExample, _ := resolver.Resolve("{{seq}}")
	unixExample, _ := resolver.Resolve("{{unix}}")

	fmt.Println("  æ”¯æŒåœ¨ URLã€è¯·æ±‚ä½“ã€è¯·æ±‚å¤´ä¸­ä½¿ç”¨å˜é‡ï¼Œä½¿ç”¨ {{variable}} æˆ– {{function}} è¯­æ³•")
	fmt.Println("  go-stress -url 'https://api.example.com/user/{{seq}}' -c 10 -n 100")
	fmt.Printf("    å®é™…ç¤ºä¾‹: https://api.example.com/user/%s\n", seqExample)
	fmt.Println("  go-stress -data '{\"timestamp\": {{unix}}, \"id\": {{seq}}}' ...")
	fmt.Printf("    å®é™…ç¤ºä¾‹: {\"timestamp\": %s, \"id\": %s}\n", unixExample, seqExample)

	printRandomExamples(resolver)
	printEnvironmentExamples(resolver)
}

func printRandomExamples(resolver *config.VariableResolver) {
	randomStr, _ := resolver.Resolve("{{randomString 8}}")
	randomInt, _ := resolver.Resolve("{{randomInt 18 60}}")
	randomUUID, _ := resolver.Resolve("{{randomUUID}}")

	fmt.Println("  # éšæœºå€¼")
	fmt.Println("  go-stress -data '{\"username\": \"user_{{randomString 8}}\", \"age\": {{randomInt 18 60}}}' ...")
	fmt.Printf("    å®é™…ç¤ºä¾‹: {\"username\": \"user_%s\", \"age\": %s}\n", randomStr, randomInt)
	fmt.Println("  go-stress -H 'X-Request-ID: {{randomUUID}}' ...")
	fmt.Printf("    å®é™…ç¤ºä¾‹: X-Request-ID: %s\n", randomUUID)
}

func printEnvironmentExamples(resolver *config.VariableResolver) {
	hostname, _ := resolver.Resolve("{{hostname}}")
	dateExample, _ := resolver.Resolve("{{date \"2006-01-02 15:04:05\"}}")

	fmt.Println("  # ç¯å¢ƒå˜é‡å’Œå…¶ä»–")
	fmt.Println("  go-stress -H 'X-Hostname: {{hostname}}' ...")
	fmt.Printf("    å®é™…ç¤ºä¾‹: X-Hostname: %s\n", hostname)
	fmt.Println("  go-stress -data '{\"date\": \"{{date \"2006-01-02 15:04:05\"}}\"}' ...")
	fmt.Printf("    å®é™…ç¤ºä¾‹: {\"date\": \"%s\"}\n", dateExample)
}

func printAvailableFunctions(resolver *config.VariableResolver) {
	// ç”Ÿæˆç¤ºä¾‹
	seqExample, _ := resolver.Resolve("{{seq}}")
	unixExample, _ := resolver.Resolve("{{unix}}")
	unixNano, _ := resolver.Resolve("{{unixNano}}")
	timestamp, _ := resolver.Resolve("{{timestamp}}")
	dateEx, _ := resolver.Resolve("{{date \"2006-01-02\"}}")

	randomInt, _ := resolver.Resolve("{{randomInt 1 100}}")
	randomFloat, _ := resolver.Resolve("{{randomFloat 0.0 1.0}}")
	randomStr, _ := resolver.Resolve("{{randomString 10}}")
	randomAlpha, _ := resolver.Resolve("{{randomAlpha 8}}")
	randomNum, _ := resolver.Resolve("{{randomNumber 6}}")
	uuidEx, _ := resolver.Resolve("{{randomUUID}}")

	emailEx, _ := resolver.Resolve("{{randomEmail}}")
	phoneEx, _ := resolver.Resolve("{{randomPhone}}")
	ipEx, _ := resolver.Resolve("{{randomIP}}")
	macEx, _ := resolver.Resolve("{{randomMAC}}")

	nameEx, _ := resolver.Resolve("{{randomName}}")
	cityEx, _ := resolver.Resolve("{{randomCity}}")
	countryEx, _ := resolver.Resolve("{{randomCountry}}")
	dateRandEx, _ := resolver.Resolve("{{randomDate}}")
	timeEx, _ := resolver.Resolve("{{randomTime}}")
	priceEx, _ := resolver.Resolve("{{randomPrice 10 100}}")

	hostname, _ := resolver.Resolve("{{hostname}}")
	localIP, _ := resolver.Resolve("{{localIP}}")

	md5Ex, _ := resolver.Resolve("{{md5 \"test\"}}")
	sha1Ex, _ := resolver.Resolve("{{sha1 \"test\"}}")
	sha256Ex, _ := resolver.Resolve("{{sha256 \"test\"}}")

	base64Ex, _ := resolver.Resolve("{{base64 \"hello\"}}")
	urlEncodeEx, _ := resolver.Resolve("{{urlEncode \"a b c\"}}")

	upperEx, _ := resolver.Resolve("{{upper \"hello\"}}")
	lowerEx, _ := resolver.Resolve("{{lower \"HELLO\"}}")
	trimEx, _ := resolver.Resolve("{{trim \" hi \"}}")
	replaceEx, _ := resolver.Resolve("{{replace \"hello\" \"l\" \"L\"}}")
	substrEx, _ := resolver.Resolve("{{substr \"hello\" 0 2}}")

	addEx, _ := resolver.Resolve("{{add 1 2}}")
	subMathEx, _ := resolver.Resolve("{{sub 5 2}}")
	mulEx, _ := resolver.Resolve("{{mul 3 4}}")
	divEx, _ := resolver.Resolve("{{div 10 2}}")
	maxEx, _ := resolver.Resolve("{{max 5 10}}")
	minEx, _ := resolver.Resolve("{{min 5 10}}")

	printEx, _ := resolver.Resolve("{{print \"a\" \"b\" \"c\"}}")
	combineEx, _ := resolver.Resolve("{{md5 (print (seq) (unix))}}")

	base64DecEx, _ := resolver.Resolve("{{base64Decode \"aGVsbG8=\"}}")
	urlDecEx, _ := resolver.Resolve("{{urlDecode \"a+b+c\"}}")
	hexEncEx, _ := resolver.Resolve("{{hexEncode \"hello\"}}")
	hexDecEx, _ := resolver.Resolve("{{hexDecode \"68656c6c6f\"}}")
	idCardEx, _ := resolver.Resolve("{{randomIDCard}}")
	boolEx, _ := resolver.Resolve("{{randomBool}}")

	fmt.Println("  ç¯å¢ƒå˜é‡ & ä¸»æœº:")
	fmt.Println("    {{env \"VAR_NAME\"}}           - è·å–ç¯å¢ƒå˜é‡")
	fmt.Printf("    {{hostname}}                  - ä¸»æœºå (ç¤ºä¾‹: %s)\n", hostname)
	fmt.Printf("    {{localIP}}                   - æœ¬æœºIP (ç¤ºä¾‹: %s)\n", localIP)

	fmt.Println("\n  åºåˆ— & æ—¶é—´:")
	fmt.Printf("    {{seq}}                       - è‡ªå¢åºåˆ—å· (ç¤ºä¾‹: %s)\n", seqExample)
	fmt.Printf("    {{unix}}                      - Unixæ—¶é—´æˆ³/ç§’ (ç¤ºä¾‹: %s)\n", unixExample)
	fmt.Printf("    {{unixNano}}                  - Unixçº³ç§’æ—¶é—´æˆ³ (ç¤ºä¾‹: %s)\n", unixNano)
	fmt.Printf("    {{timestamp}}                 - Unixæ¯«ç§’æ—¶é—´æˆ³ (ç¤ºä¾‹: %s)\n", timestamp)
	fmt.Printf("    {{date \"2006-01-02\"}}         - æ ¼å¼åŒ–æ—¥æœŸ (ç¤ºä¾‹: %s)\n", dateEx)

	fmt.Println("\n  éšæœº-åŸºç¡€:")
	fmt.Printf("    {{randomInt 1 100}}           - éšæœºæ•´æ•° (ç¤ºä¾‹: %s)\n", randomInt)
	fmt.Printf("    {{randomFloat 0.0 1.0}}       - éšæœºæµ®ç‚¹æ•° (ç¤ºä¾‹: %s)\n", randomFloat)
	fmt.Printf("    {{randomString 10}}           - éšæœºå­—ç¬¦ä¸² (ç¤ºä¾‹: %s)\n", randomStr)
	fmt.Printf("    {{randomAlpha 8}}             - éšæœºå­—æ¯ (ç¤ºä¾‹: %s)\n", randomAlpha)
	fmt.Printf("    {{randomNumber 6}}            - éšæœºæ•°å­— (ç¤ºä¾‹: %s)\n", randomNum)
	fmt.Printf("    {{randomUUID}}                - UUID (ç¤ºä¾‹: %s)\n", uuidEx)
	fmt.Printf("    {{randomBool}}                - éšæœºå¸ƒå°”å€¼ (ç¤ºä¾‹: %s)\n", boolEx)

	fmt.Println("\n  éšæœº-æ ¼å¼åŒ–:")
	fmt.Printf("    {{randomEmail}}               - éšæœºé‚®ç®± (ç¤ºä¾‹: %s)\n", emailEx)
	fmt.Printf("    {{randomPhone}}               - éšæœºæ‰‹æœºå· (ç¤ºä¾‹: %s)\n", phoneEx)
	fmt.Printf("    {{randomIP}}                  - éšæœºIPåœ°å€ (ç¤ºä¾‹: %s)\n", ipEx)
	fmt.Printf("    {{randomMAC}}                 - éšæœºMACåœ°å€ (ç¤ºä¾‹: %s)\n", macEx)

	fmt.Println("\n  éšæœº-ä¸šåŠ¡åœºæ™¯:")
	fmt.Printf("    {{randomName}}                - éšæœºå§“å (ç¤ºä¾‹: %s)\n", nameEx)
	fmt.Printf("    {{randomCity}}                - éšæœºåŸå¸‚ (ç¤ºä¾‹: %s)\n", cityEx)
	fmt.Printf("    {{randomCountry}}             - éšæœºå›½å®¶ (ç¤ºä¾‹: %s)\n", countryEx)
	fmt.Printf("    {{randomDate}}                - éšæœºæ—¥æœŸ (ç¤ºä¾‹: %s)\n", dateRandEx)
	fmt.Printf("    {{randomTime}}                - éšæœºæ—¶é—´ (ç¤ºä¾‹: %s)\n", timeEx)
	fmt.Printf("    {{randomPrice 10 100}}        - éšæœºä»·æ ¼ (ç¤ºä¾‹: %s)\n", priceEx)
	fmt.Printf("    {{randomIDCard}}              - éšæœºèº«ä»½è¯å· (ç¤ºä¾‹: %s)\n", idCardEx)

	fmt.Println("\n  åŠ å¯†/å“ˆå¸Œ:")
	fmt.Printf("    {{md5 \"text\"}}               - MD5 (ç¤ºä¾‹: %s)\n", md5Ex)
	fmt.Printf("    {{sha1 \"text\"}}              - SHA1 (ç¤ºä¾‹: %s...)\n", sha1Ex[:16])
	fmt.Printf("    {{sha256 \"text\"}}            - SHA256 (ç¤ºä¾‹: %s...)\n", sha256Ex[:16])

	fmt.Println("\n  ç¼–ç /è§£ç :")
	fmt.Printf("    {{base64 \"hello\"}}           - Base64ç¼–ç  (ç¤ºä¾‹: %s)\n", base64Ex)
	fmt.Printf("    {{base64Decode \"aGVsbG8=\"}}  - Base64è§£ç  (ç¤ºä¾‹: %s)\n", base64DecEx)
	fmt.Printf("    {{urlEncode \"a b c\"}}        - URLç¼–ç  (ç¤ºä¾‹: %s)\n", urlEncodeEx)
	fmt.Printf("    {{urlDecode \"a+b+c\"}}        - URLè§£ç  (ç¤ºä¾‹: %s)\n", urlDecEx)
	fmt.Printf("    {{hexEncode \"hello\"}}        - åå…­è¿›åˆ¶ç¼–ç  (ç¤ºä¾‹: %s)\n", hexEncEx)
	fmt.Printf("    {{hexDecode \"68656c6c6f\"}}   - åå…­è¿›åˆ¶è§£ç  (ç¤ºä¾‹: %s)\n", hexDecEx)

	fmt.Println("\n  å­—ç¬¦ä¸²æ“ä½œ:")
	fmt.Printf("    {{upper \"hello\"}}            - è½¬å¤§å†™ (ç¤ºä¾‹: %s)\n", upperEx)
	fmt.Printf("    {{lower \"HELLO\"}}            - è½¬å°å†™ (ç¤ºä¾‹: %s)\n", lowerEx)
	fmt.Printf("    {{trim \" hi \"}}              - å»é™¤ç©ºæ ¼ (ç¤ºä¾‹: %s)\n", trimEx)
	fmt.Printf("    {{replace \"hello\" \"l\" \"L\"}} - å­—ç¬¦ä¸²æ›¿æ¢ (ç¤ºä¾‹: %s)\n", replaceEx)
	fmt.Printf("    {{substr \"hello\" 0 2}}       - æˆªå–å­ä¸² (ç¤ºä¾‹: %s)\n", substrEx)

	fmt.Println("\n  æ•°å­¦è¿ç®—:")
	fmt.Printf("    {{add 1 2}}                   - åŠ æ³• (ç¤ºä¾‹: %s)\n", addEx)
	fmt.Printf("    {{sub 5 2}}                   - å‡æ³• (ç¤ºä¾‹: %s)\n", subMathEx)
	fmt.Printf("    {{mul 3 4}}                   - ä¹˜æ³• (ç¤ºä¾‹: %s)\n", mulEx)
	fmt.Printf("    {{div 10 2}}                  - é™¤æ³• (ç¤ºä¾‹: %s)\n", divEx)
	fmt.Printf("    {{max 5 10}}                  - æœ€å¤§å€¼ (ç¤ºä¾‹: %s)\n", maxEx)
	fmt.Printf("    {{min 5 10}}                  - æœ€å°å€¼ (ç¤ºä¾‹: %s)\n", minEx)

	fmt.Println("\n  ç»„åˆå‡½æ•°:")
	fmt.Printf("    {{print \"a\" \"b\" \"c\"}}       - æ‹¼æ¥å­—ç¬¦ä¸² (ç¤ºä¾‹: %s)\n", printEx)
	fmt.Printf("    {{md5 (print (seq) (unix))}}  - ç»„åˆä½¿ç”¨ (ç¤ºä¾‹: %s)\n", combineEx)

	fmt.Println("\n  ğŸ’¡ æ›´å¤šå‡½æ•°è¯·å‚è€ƒæ–‡æ¡£: docs/VARIABLES.md")
}

func printConfigExample() {
	fmt.Println("protocol: http")
	fmt.Println("url: https://api.example.com/users")
	fmt.Println("method: POST")
	fmt.Println("concurrency: 10")
	fmt.Println("requests: 100")
	fmt.Println("headers:")
	fmt.Println("  Content-Type: application/json")
	fmt.Println("  X-Request-ID: \"{{randomUUID}}\"")
	fmt.Println("  X-Trace-ID: \"{{md5 (print (seq) (timestamp))}}\"")
	fmt.Println("  Authorization: \"Bearer {{env \"API_TOKEN\"}}\"")
	fmt.Println("body: |")
	fmt.Println("  {")
	fmt.Println("    \"id\": {{seq}},")
	fmt.Println("    \"username\": \"user_{{randomString 8}}\",")
	fmt.Println("    \"email\": \"{{randomEmail}}\",")
	fmt.Println("    \"phone\": \"{{randomPhone}}\",")
	fmt.Println("    \"timestamp\": {{timestamp}},")
	fmt.Println("    \"client_ip\": \"{{randomIP}}\",")
	fmt.Println("    \"token\": \"{{base64 (randomString 16)}}\"")
	fmt.Println("  }")
}

// runMasterMode è¿è¡Œ Master æ¨¡å¼
func runMasterMode() {
	// åˆ¤æ–­æ˜¯å¦æœ‰ä»»åŠ¡é…ç½®
	hasTask := configFile != "" || curlFile != "" || url != ""

	opts := bootstrap.MasterOptions{
		GRPCPort:          grpcPort,
		HTTPPort:          httpPort,
		Logger:            logger.Default,
		ConfigFile:        configFile,
		CurlFile:          curlFile,
		Concurrency:       concurrency,
		Requests:          requests,
		URL:               url,
		AutoSubmit:        hasTask, // æœ‰ä»»åŠ¡é…ç½®æ—¶è‡ªåŠ¨æäº¤
		WaitSlaves:        1,       // è‡³å°‘ç­‰å¾… 1 ä¸ª Slave
		WaitTimeout:       30 * time.Second,
		WorkersPerSlave:   workersPerSlave,   // ä»å‘½ä»¤è¡Œä¼ å…¥
		MinSlaveCount:     minSlaveCount,     // ä»å‘½ä»¤è¡Œä¼ å…¥
		HeartbeatInterval: heartbeatInterval, // ä»å‘½ä»¤è¡Œä¼ å…¥
		HeartbeatTimeout:  heartbeatTimeout,  // ä»å‘½ä»¤è¡Œä¼ å…¥
		MaxFailures:       maxFailures,       // ä»å‘½ä»¤è¡Œä¼ å…¥
		TokenExpiration:   tokenExpiration,   // ä»å‘½ä»¤è¡Œä¼ å…¥
		TokenIssuer:       tokenIssuer,       // ä»å‘½ä»¤è¡Œä¼ å…¥
		Secret:            masterSecret,      // ä»å‘½ä»¤è¡Œä¼ å…¥
	}

	if err := bootstrap.RunMaster(opts); err != nil {
		logger.Default.Fatalf("âŒ è¿è¡Œ Master å¤±è´¥: %v", err)
	}
}

// runSlaveMode è¿è¡Œ Slave æ¨¡å¼
func runSlaveMode() {
	opts := bootstrap.SlaveOptions{
		SlaveID:        slaveID,
		MasterAddr:     masterAddr,
		GRPCPort:       grpcPort,
		RealtimePort:   realtimePort,
		Region:         region,
		MaxConcurrency: 5,
		CanReuse:       true,
		Logger:         logger.Default,
	}
	if err := bootstrap.RunSlave(opts); err != nil {
		logger.Default.Fatalf("âŒ è¿è¡Œ Slave å¤±è´¥: %v", err)
	}
}

// runStandaloneMode è¿è¡Œç‹¬ç«‹æ¨¡å¼
func runStandaloneMode() {
	opts := bootstrap.StandaloneOptions{
		ConfigFile:   configFile,
		CurlFile:     curlFile,
		Concurrency:  concurrency,
		Requests:     requests,
		Timeout:      timeout,
		StorageMode:  storageMode,
		ReportPrefix: reportPrefix,
		MaxMemory:    maxMemory,
		Logger:       logger.Default,
		ConfigFunc:   buildConfigFromFlags,
	}
	if err := bootstrap.RunStandalone(opts); err != nil {
		logger.Default.Fatalf("âŒ è¿è¡Œ Standalone å¤±è´¥: %v", err)
	}
}
